--- a/04-Built-In-Hooks-Adv/package.json
+++ b/04-Built-In-Hooks-Adv/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
