--- a/02-Basic-React-Hooks/clip-03-setState-First-Time-Use/package.json
+++ b/02-Basic-React-Hooks/clip-03-setState-First-Time-Use/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "bootstrap": "^4.3.1",
     "next": "^8.0.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3"
