--- a/02-Basic-React-Hooks/clip-c-adding-bootstrap-style/package.json
+++ b/02-Basic-React-Hooks/clip-c-adding-bootstrap-style/package.json
@@ -6,16 +6,15 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "json-server": "json-server --watch db.json --port 4000 --delay 1000"
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
-    "bootstrap": "^4.1.3",
-    "next": "^7.0.2",
+    "bootstrap": "^4.3.1",
+    "next": "^8.0.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-toastify": "^4.5.2"
@@ -23,6 +22,8 @@
   "devDependencies": {
     "eslint": "^5.15.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.0",
+    "prettier": "1.16.4",
     "react-hooks": "^1.0.1"
   }
 }
