working with useCallback with speaker day change checkbox

--- a/02-Basic-React-Hooks/clip-c-adding-bootstrap-style/.eslintrc.json
+++ b/02-Basic-React-Hooks/clip-c-adding-bootstrap-style/.eslintrc.json
@@ -6,9 +6,7 @@
       "jsx": true
     }
   },
-  "plugins": [
-    "react-hooks"
-  ],
+  "plugins": ["react-hooks"],
   "rules": {
     //additional rules here
     "react-hooks/rules-of-hooks": "error"
