--- a/02-Basic-React-Hooks/clip-c-adding-bootstrap-style/.eslintrc.json
+++ b/02-Basic-React-Hooks/clip-c-adding-bootstrap-style/.eslintrc.json
@@ -3,7 +3,10 @@
     "ecmaVersion": 6,
     "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
+      "destructuring": true,
+      "spread": true,
+      "experimentalObjectRestSpread": true
     }
   },
   "plugins": ["react-hooks"],
