--- a/02-Basic-React-Hooks-useState-useRef-useEffect/OLDER/clip-c-adding-bootstrap-style/package.json
+++ b/02-Basic-React-Hooks-useState-useRef-useEffect/OLDER/clip-c-adding-bootstrap-style/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.5.0",
     "prettier": "1.16.4",
-    "react-hooks": "^1.0.1"
+    "react-hooks": "^1.0.1",
+    "react-performance": "0.0.5"
   }
 }
