--- a/03-More-React-Hooks-useContext-useReducer-useCallback-useMemo/clip3-Updating-Example-To-Full-Conf-Site/package.json
+++ b/03-More-React-Hooks-useContext-useReducer-useCallback-useMemo/clip3-Updating-Example-To-Full-Conf-Site/package.json
@@ -9,7 +9,7 @@
     "start": "next start"
   },
   "keywords": [],
-  "author": "",
+  "author": "Peter Kellner",
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
