--- a/04-React-Classes-Differences-To-Hooks/_experimental/M2-clip6-using-useRef-Hook-onScroll/package.json
+++ b/04-React-Classes-Differences-To-Hooks/_experimental/M2-clip6-using-useRef-Hook-onScroll/package.json
@@ -13,8 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^8.0.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   }
 }
